Connect ProductPage to Redux

--- a/wireframes/style.css
+++ b/wireframes/style.css
@@ -39,6 +39,9 @@ body {
 body, h1, h2, h3, h4, h5, h6 {
   font-family: 'Lato', sans-serif; }
 
+.grid-container {
+  max-width: 64rem; }
+
 .product__info {
   margin-bottom: 16px; }
 
