--- a/src/index.ejs
+++ b/src/index.ejs
@@ -22,10 +22,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
 </head>
 <body>
-  <div class="grid-container">
-    <div class="grid-x grid-margin-x">
-      <div id="app" class="small-12 medium-8 medium-offset-2 large-6 large-offset-3 cell"></div>
-    </div>
-  </div>
+  <div id="app"></div>
 </body>
 </html>
