Added Shopping Cart

--- a/wireframes/style.sass
+++ b/wireframes/style.sass
@@ -30,7 +30,7 @@ $h7: 12px
     +button('success', $success)
 
 body
-  padding-top: $default-margin
+  padding-top: $default-margin + 8
 
 body, h1, h2, h3, h4, h5, h6
   font-family: 'Lato', sans-serif
@@ -74,3 +74,13 @@ body, h1, h2, h3, h4, h5, h6
 .product__order
   .button
     font-weight: bold
+
+.cart__header
+  background-color: $blue
+  color: $white
+  font-weight: bold
+  font-size: 20px
+  line-height: 1
+
+.cart__empty
+  color: $gray-600
