--- a/wireframes/style.css
+++ b/wireframes/style.css
@@ -34,7 +34,7 @@
     color: #fff; }
 
 body {
-  padding-top: 16px; }
+  padding-top: 24px; }
 
 body, h1, h2, h3, h4, h5, h6 {
   font-family: 'Lato', sans-serif; }
@@ -77,5 +77,15 @@ body, h1, h2, h3, h4, h5, h6 {
 
 .product__order .button {
   font-weight: bold; }
+
+.cart__header {
+  background-color: #007bff;
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1; }
+
+.cart__empty {
+  color: #868e96; }
 
 /*# sourceMappingURL=style.css.map */
