Route to Shopping Cart page

--- a/wireframes/style.sass
+++ b/wireframes/style.sass
@@ -38,6 +38,19 @@ body, h1, h2, h3, h4, h5, h6
 .grid-container
   max-width: 64rem
 
+.shop__nav
+  margin-bottom: $default-margin + 8
+  a
+    display: inline-block
+    padding: 2px 8px
+    color: $blue
+  .active
+    background-color: $blue
+    color: $white
+  .divider
+    margin-left: $default-margin - 4
+    margin-right: $default-margin - 4
+
 .product__info
   margin-bottom: $default-margin
 
