--- a/wireframes/style.css
+++ b/wireframes/style.css
@@ -42,6 +42,19 @@ body, h1, h2, h3, h4, h5, h6 {
 .grid-container {
   max-width: 64rem; }
 
+.shop__nav {
+  margin-bottom: 24px; }
+  .shop__nav a {
+    display: inline-block;
+    padding: 2px 8px;
+    color: #007bff; }
+  .shop__nav .active {
+    background-color: #007bff;
+    color: #fff; }
+  .shop__nav .divider {
+    margin-left: 12px;
+    margin-right: 12px; }
+
 .product__info {
   margin-bottom: 16px; }
 
