--- a/wireframes/style.css
+++ b/wireframes/style.css
@@ -128,4 +128,11 @@ body, h1, h2, h3, h4, h5, h6 {
   font-size: 20px;
   font-weight: bold; }
 
+.cart__remove {
+  position: relative;
+  top: -2px;
+  padding: 0.25em 0.35em;
+  margin-right: 3px;
+  margin-bottom: 0; }
+
 /*# sourceMappingURL=style.css.map */
