--- a/wireframes/style.sass
+++ b/wireframes/style.sass
@@ -16,6 +16,12 @@ $h7: 12px
   &:hover
     background-color: darken($bgc, 10%)
     color: $color
+  &.hollow
+    background-color: transparent
+  .arrow-left
+    border-right-color: $bgc
+  .arrow-right
+    border-left-color: $white
 
 .button
   &.selected
@@ -28,6 +34,16 @@ $h7: 12px
     +button('secondary', $secondary)
   &.success
     +button('success', $success)
+  .button-group &
+    margin-right: 5px
+  .arrow
+    display: inline-block
+    position: relative
+    top: 2px
+  .arrow-left
+    margin-right: 7px
+  .arrow-right
+    margin-left: 7px
 
 body
   padding-top: $default-margin + 8
@@ -108,9 +124,11 @@ body, h1, h2, h3, h4, h5, h6
   .price
     display: inline-block
   .name
-    width: 66.66667%
+    width: 60%
   .price
-    width: 33.33333%
+    width: 30%
+  .action
+    width: 10%
 
 .cart__main-product
   font-size: $h5
@@ -120,6 +138,14 @@ body, h1, h2, h3, h4, h5, h6
   margin-bottom: $default-margin
 
 .cart__total-price
-  margin-bottom: $default-margin
+  // margin-bottom: $default-margin
   font-size: $h5
   font-weight: bold
+
+.cart__remove
+  position: relative
+  top: -2px
+  padding: 0.25em 0.35em
+  margin-right: 3px
+  margin-bottom: 0
+  border-radius: 6px
