Data from (local) JSON file

--- a/wireframes/_colors.sass
+++ b/wireframes/_colors.sass
@@ -21,6 +21,10 @@ $green:   #28a745
 $teal:    #20c997
 $cyan:    #17a2b8
 
+$off-white: #FFFFFE
+$silver: #C0C0C0
+$audi-brown: #3F250B
+
 $primary: $blue
 $secondary: $gray-600
 $success: $green
