--- a/wireframes/style.sass
+++ b/wireframes/style.sass
@@ -102,12 +102,12 @@ body, h1, h2, h3, h4, h5, h6
   line-height: 1
 
 .product__summary,
-.product__visual,
+.product__price,
 .product__options
   margin-bottom: $default-margin
 
 .product__visual
-  display: none
+  // display: none
   height: 312px
   img
     max-height: 100%
