Customer info form

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -20,6 +20,7 @@
   <title>React QonQer Webshop</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation-prototype.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+  <script src="https://use.fontawesome.com/85439eeb40.js"></script>
 </head>
 <body>
   <div id="app"></div>
