--- a/wireframes/_cart.sass
+++ b/wireframes/_cart.sass
@@ -1,12 +1,12 @@
-.cart__header
+.card__header
   background-color: $blue
   color: $white
   font-weight: bold
   line-height: 1
-  .cart--cart-page &
+  .card--main &
     font-size: 20px
     padding: 0.9rem
-  .cart--form-page &
+  .card--sidebar &
     font-size: 16px
     padding: 0.7rem 0.9rem
 
@@ -26,9 +26,9 @@
 
 .cart__main-product,
 .cart__total-price
-  .cart--cart-page &
+  .card--main &
     font-size: $h5
-  .cart--form-page &
+  .card--sidebar &
     font-size: $h6
 
 .cart__main-product
@@ -38,9 +38,9 @@
   margin-bottom: $default-margin
 
 .cart__option
-  .cart--cart-page &
+  .card--main &
     font-size: $h6
-  .cart--form-page &
+  .card--sidebar &
     font-size: $h7
 
 .cart__total-price
@@ -53,3 +53,6 @@
   margin-right: 3px
   margin-bottom: 0
   border-radius: 10px
+
+.customer-details
+  font-size: $h7
