Shopping Cart Page

--- a/wireframes/_colors.sass
+++ b/wireframes/_colors.sass
@@ -33,3 +33,30 @@ $warning: $yellow
 $danger: $red
 $light: $gray-100
 $dark: $gray-800
+
+$nero-gray: #272727
+$nobel-gray: #999
+$torch-red: #e7002d
+$summer-sky-blue: #289ad5
+$santa-fe-orange: #a4664d
+$rajah-orange: #fcb769
+$dark-salmon-orange: #e58e73
+$glacier-blue: #6ea8bc
+$lima-green: #7CBB1F
+
+$qicq-dark-gray: $nero-gray
+$qicq-light-gray: $gray-600 // $nobel-gray
+$qicq-red: $torch-red
+$qicq-blue: $summer-sky-blue
+$qicq-green: $lima-green
+
+$qicq-logo-dark-brown: $santa-fe-orange
+$qicq-logo-light-brown: $rajah-orange
+$qicq-logo-medium-brown: $dark-salmon-orange
+$qicq-logo-blue: $glacier-blue
+
+$success: $qicq-green
+$danger: $qicq-red
+$primary: $qicq-blue
+$light: $qicq-light-gray
+$dark: $qicq-dark-gray
