--- a/wireframes/_cart.sass
+++ b/wireframes/_cart.sass
@@ -14,45 +14,49 @@
   color: $gray-600
 
 .cart__item
-  .name,
-  .price
-    display: inline-block
-  .name
-    width: 70%
-  .price
-    width: 25%
-  .action
-    width: 5%
-
-.cart__main-product,
-.cart__total-price
-  .card--main &
-    font-size: $h5
-  .card--sidebar &
-    font-size: $h6
-
-.cart__main-product
-  margin-bottom: 4px
-
-.cart__options
   margin-bottom: $default-margin
+  &:last-child
+    margin-bottom: 0
 
-.cart__option
-  .card--main &
-    font-size: $h6
-  .card--sidebar &
-    font-size: $h7
+.cart__product-visual
+  border: 1px solid $gray-200
 
+.cart__product-name,
+.cart__product-price,
+.cart__total-name,
 .cart__total-price
-  font-weight: bold
+  font-family: $nav-ff
+  font-size: $h5
+  line-height: 1.3
+
+.cart__product-name
+  a
+    color: $qicq-dark-gray
+
+.cart__option-name,
+.cart__option-price
+  font-size: $h6
+
+.cart__option-name
+  font-family: $body-ff
+
+.cart__option-price
+  font-family: $subnav-ff
 
 .cart__remove
+  font-size: $h8
   position: relative
-  top: -1px
-  padding: 0.15em 0.35em
-  margin-right: 3px
-  margin-bottom: 0
-  border-radius: 10px
+  top: -2px
 
-.customer-details
-  font-size: $h7
+.product__choices
+  font-size: $h6
+  line-height: 1.5
+  margin-bottom: $default-margin / 4
+  span
+    font-family: $body-bold-ff
+
+.cart__total-name
+  text-transform: uppercase
+
+.cart__button-next
+  float: right
