--- a/src/style/_colors.sass
+++ b/src/style/_colors.sass
@@ -60,3 +60,7 @@ $danger: $qicq-red
 $primary: $qicq-blue
 $light: $qicq-light-gray
 $dark: $qicq-dark-gray
+
+$green: $qicq-green
+$red: $qicq-red
+$blue: $qicq-blue
